@@ -3,8 +3,10 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
-- Private events are no shown only as black/gray space with no links for
+- Private events are now shown only as black/gray space with no links for
   other users.
+- There is now a setting on the portal_cpscalendar to select if events 
+  should have fulltext indexing or not.
 Bug fixes:
 ~~~~~~~~~~
 - Permission problems when validating fixed by using unrestrictedtraverse.
